# acclimate

./: .clang-format  .gitignore  .gitmodules  .iwyu.imp  .mailmap  .zenodo.json  .zenodo.json.license  AUTHORS  CMakeLists.txt  FindNETCDF.cmake  README.md  csv-parser.h  helpers.cmake  libmrio.cmake  libraries.cmake  makefile  misc.h  netcdftools.h  nvector.h  progressbar.h  zip-wrapper.h
.github/workflows/: ccpp.yml
cmake/: FindNETCDF.cmake  FindNETCDF_CPP4.cmake  FindNETCDF_Fortran.cmake  FindNLOPT.cmake  FindYAML_CPP.cmake  git_version.cmake  helpers.cmake  libraries.cmake
doc/: Doxyfile.in
example/: settings.yml
examples/simple/: basetable.csv  indices.csv  proxy1.csv  proxy2.csv
figures/: class_diagram_small.png.license
include/: Disaggregation.h  MRIOIndexSet.h  MRIOTable.h  ModelRun.h  acclimate.h  checkpointing.h  exceptions.h  growth.h  helpers.h  info.h  netcdf_headers.h  openmp.h  optimization.h  parameters.h  run.h  settingsnode.h  types.h
include/input/: ModelInitializer.h
include/model/: BusinessConnection.h  CapacityManager.h  CapacityManagerPrices.h  Consumer.h  EconomicAgent.h  Firm.h  GeoConnection.h  GeoEntity.h  GeoLocation.h  GeoPoint.h  GeoRoute.h  GeographicEntity.h  GeographicPoint.h  Government.h  Identifier.h  Infrastructure.h  Model.h  PurchasingManager.h  PurchasingManagerBasic.h  PurchasingManagerDemand.h  PurchasingManagerPrices.h  Region.h  SalesManager.h  SalesManagerBasic.h  SalesManagerDemand.h  SalesManagerPrices.h  Sector.h  Storage.h  TransportChainLink.h
include/output/: ArrayOutput.h  ConsoleOutput.h  DamageOutput.h  GnuplotOutput.h  HistogramOutput.h  JSONNetworkOutput.h  JSONOutput.h  NetCDFOutput.h  Output.h  ProgressOutput.h
include/scenario/: DirectPopulation.h  EventSeriesScenario.h  ExternalForcing.h  ExternalScenario.h  Flooding.h  HeatLaborProductivity.h  Hurricanes.h  RasteredData.h  RasteredScenario.h  RasteredTimeData.h  Scenario.h  Taxes.h
include/variants/: ModelVariants.h  Variant.h  VariantBasic.h  VariantDemand.h  VariantPrices.h
lib/cpp-library/: README.md  autodiff.h  csv-parser.h  cudatools.h  misc.h  mmappedfile.h  netcdftools.h  nvector.h  progressbar.h  zip-wrapper.h
lib/cpp-library/tests/: progressbar.cpp
lib/libmrio/: .clang-format  .gitignore  .zenodo.json  README.md  libmrio.cmake
lib/libmrio/cmake/: FindNETCDF_Fortran.cmake  libraries.cmake
lib/libmrio/examples/simple/: settings.yml
lib/libmrio/include/: Disaggregation.h  MRIOIndexSet.h  MRIOTable.h
lib/libmrio/lib/cpp-library/: csv-parser.h  misc.h  netcdftools.h  progressbar.h
lib/libmrio/lib/settingsnode/: settingsnode.cmake
lib/libmrio/lib/settingsnode/cmake/: FindNLOPT.cmake
lib/libmrio/lib/settingsnode/include/: settingsnode.h
lib/libmrio/lib/settingsnode/include/settingsnode/: inner.h  yaml.h
lib/libmrio/src/: Disaggregation.cpp  MRIOTable.cpp  main.cpp
lib/settingsnode/: git_version.cmake  settingsnode.cmake
lib/settingsnode/include/: settingsnode.h
lib/settingsnode/include/settingsnode/: inner.h  pybind.h
src/: Disaggregation.cpp  MRIOIndexSet.cpp  MRIOTable.cpp  ModelRun.cpp  acclimate.cpp  checkpointing.cpp  external.cpp  info.cpp  main.cpp  pybind.cpp  run.cpp
src/input/: ModelInitializer.cpp
src/model/: BusinessConnection.cpp  CapacityManager.cpp  CapacityManagerPrices.cpp  Consumer.cpp  EconomicAgent.cpp  Firm.cpp  GeoConnection.cpp  GeoEntity.cpp  GeoLocation.cpp  GeoPoint.cpp  GeoRoute.cpp  GeographicEntity.cpp  GeographicPoint.cpp  Government.cpp  Identifier.cpp  Infrastructure.cpp  Model.cpp  PurchasingManager.cpp  PurchasingManagerBasic.cpp  PurchasingManagerDemand.cpp  PurchasingManagerPrices.cpp  Region.cpp  SalesManager.cpp  SalesManagerBasic.cpp  SalesManagerDemand.cpp  SalesManagerPrices.cpp  Sector.cpp  Storage.cpp  TransportChainLink.cpp
src/output/: ArrayOutput.cpp  ConsoleOutput.cpp  DamageOutput.cpp  GnuplotOutput.cpp  HistogramOutput.cpp  JSONNetworkOutput.cpp  JSONOutput.cpp  NetCDFOutput.cpp  Output.cpp  ProgressOutput.cpp
src/scenario/: DirectPopulation.cpp  EventSeriesScenario.cpp  ExternalForcing.cpp  ExternalScenario.cpp  Flooding.cpp  HeatLaborProductivity.cpp  Hurricanes.cpp  RasteredData.cpp  RasteredScenario.cpp  RasteredTimeData.cpp  Scenario.cpp  Taxes.cpp
tests/: makefile  progressbar.cpp
